<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="interstitial_ad_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="native_ad_id">ca-app-pub-3940256099942544/2247696110</string>
    <string name="ad_attribution">Ad</string>
    <string name="exit">Exit</string>
    <string name="app_name">Music Composition App For Beginners</string>
    <string name="time_sig">Time Sig</string>
    <string name="time_sig_bar">/</string>
    <string name="bpm">BPM</string>
    <string name="bpm_range">Please enter a value between 40 and 360.</string>
    <string name="permission_message">Permission to use microphone denied.</string>
    <string name="load_fail_message">Project load failed.</string>
    <string name="no_clipboard_message">There is no data on the clipboard.</string>
    <string name="copy_message">Copied to clipboard. Press and hold where you want to paste.</string>
    <string name="paste_message">Do you want to paste the data from the clipboard?</string>
    <string name="paste_fail_message">There is not enough space to paste.</string>
    <string name="ask_delete_message">Are you sure you want to delete?</string>
    <string name="project">Project Name</string>
    <string name="save_project_message">Project[%1$s] has been Saved.</string>
    <string name="delete_project_message">Do you want to delete Project[%1$s]?</string>
    <string name="exist_project_delete_message">Project[%1$s] already exists. Do you want to overwrite it?</string>
    <string name="unsaved_project_delete_message">Unsaved data will be lost. Do you want to continue without saving?</string>
    <string name="project_name_error_message">Project name is not valid.</string>
    <string name="editing_project_delete_message">This Project is currently being edited.</string>
    <string name="add_track_fail_message">Maximum number of tracks is 99.</string>
    <string name="used_inst_list">Recently used instruments</string>
    <string name="choose_inst_add">Select an Instrument to add</string>
    <string name="choose_inst_edit">Select an Instrument you want to change</string>
    <string name="unit">Note</string>
    <string name="size">Size</string>
    <string name="pos">Pos</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="left">&#60;</string>
    <string name="right">&#62;</string>
    <string name="c">C</string>
    <string name="c_sharp">C#</string>
    <string name="d">D</string>
    <string name="d_sharp">D#</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="f_sharp">F#</string>
    <string name="g">G</string>
    <string name="g_sharp">G#</string>
    <string name="a">A</string>
    <string name="a_sharp">A#</string>
    <string name="b">B</string>
    <string name="copy">Copy</string>
    <string name="paste">Paste</string>
    <string name="delete">Delete</string>
    <string name="load_project">Load Project</string>
    <string name="new_project">New Project</string>
    <string name="load">Load Project</string>
    <string name="save">Save</string>
    <string name="save_as">Save as</string>
    <string name="edit">Edit</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="warning">Warning</string>
    <string name="share">Share</string>
    <string name="share_after_record">Share after recording</string>
    <string name="volume">Volume</string>
    <string name="octave">Octave</string>
    <string name="pitch">Pitch</string>
    <string name="inst_text">%1$d. %2$s</string>
    <string name="screen_setting">Screen Setting</string>
    <string name="note_width">Width</string>
    <string name="note_height">Height</string>
</resources>
