<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/transparent"
    android:paddingStart="30dp"
    android:paddingEnd="30dp">
    <TextView
        android:textColor="#449def"
        android:textSize="15sp"
        android:textStyle="bold"
        android:shadowColor="#000000"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/load_project"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <RadioGroup
            android:id="@+id/projectSelectPanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        </RadioGroup>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp">
        <Button
            android:id="@+id/deleteBtn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:background="@drawable/blue_button"
            android:text="@string/delete"
            android:visibility="invisible"
            android:onClick="deleteBtnClicked"
            style="@style/ButtonText"/>
        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="0dp"/>
        <Button
            android:id="@+id/okBtn"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/blue_button"
            android:text="@string/ok"
            android:visibility="invisible"
            android:onClick="okBtnClicked"
            style="@style/ButtonText"/>
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/blue_button"
            android:text="@string/cancel"
            android:onClick="cancelBtnClicked"
            style="@style/ButtonText"/>
    </LinearLayout>
</LinearLayout>
