<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@android:color/transparent"
    android:paddingStart="50dp"
    android:paddingEnd="50dp">
    <TextView
        android:id="@+id/bpmRangeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#449def"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:shadowColor="#000000"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="2"
        android:visibility="invisible"
        android:text="@string/bpm_range"
        />
    <EditText
        android:id="@+id/editBpmText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:digits="0123456789"
        android:inputType="numberDecimal"
        android:maxLength="3"
        android:textStyle="bold"
        android:textSize="25sp"
        android:background="@drawable/text_bg"
        android:layout_margin="20dp"
        android:textAlignment="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/blue_button"
            android:text="@string/ok"
            android:onClick="okBtnClicked"
            style="@style/ButtonText"/>
        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/blue_button"
            android:text="@string/cancel"
            android:onClick="cancelBtnClicked"
            style="@style/ButtonText"/>
        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"/>
    </LinearLayout>
</LinearLayout>