<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@android:color/transparent"
    android:paddingStart="30dp"
    android:paddingEnd="30dp">
    <TextView
        android:textColor="#449def"
        android:textSize="15sp"
        android:textStyle="bold"
        android:shadowColor="#000000"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/screen_setting"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#f5ebeb"
            android:layout_marginEnd="20dp"
            android:text="@string/note_width"/>
        <ImageButton
            android:id="@+id/noteWidthLeft"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/blue_button"
            android:src="@drawable/left_arrow"
            android:padding="5dp"
            android:scaleType="fitCenter"
            android:layout_marginEnd="20dp"
            android:adjustViewBounds="true"/>
        <ImageButton
            android:id="@+id/noteWidthRight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/blue_button"
            android:src="@drawable/right_arrow"
            android:padding="5dp"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#f5ebeb"
            android:layout_marginEnd="20dp"
            android:text="@string/note_height"/>
        <ImageButton
            android:id="@+id/noteHeightLeft"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/blue_button"
            android:src="@drawable/left_arrow"
            android:padding="5dp"
            android:scaleType="fitCenter"
            android:layout_marginEnd="20dp"
            android:adjustViewBounds="true"/>
        <ImageButton
            android:id="@+id/noteHeightRight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/blue_button"
            android:src="@drawable/right_arrow"
            android:padding="5dp"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"/>
    </LinearLayout>
</LinearLayout>
